[package]
name = "demo-main"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
once_cell = "1.20"
pprof = "0.5"
hyperlight-host = { git = "https://github.com/dblnz/hyperlight.git", branch = "gdb-coredump-elfcore", features = ["crashdump", "gdb"] }
hyperlight-common = { git = "https://github.com/dblnz/hyperlight.git", branch = "gdb-coredump-elfcore" }

[features]
default = []
crashdump = []
gdb = []
